<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VariantChess</string>
    <string name="btn_launch_game">Launch</string>
    <string name="btn_end_turn">End turn</string>
    <string name="lbl_connect">Connection</string>
    <string name="lbl_create_account">Create account</string>
    <string name="lbl_btn_facebook">Facebook</string>
    <string name="lbl_btn_google">Google</string>
    <string name="lbl_hint_email">example@test.com</string>
    <string name="lbl_hint_password">8 character with numbers</string>
    <string name="app_id">737891246568</string>
    <string name="lbl_mail_connect">Connect with your mail</string>
    <string name="lbl_google_connect">Or with your Google account</string>
    <string name="lbl_confirm">Connect</string>
    <string name="menu_icon">Menu icon</string>
    <string name="lbl_online_game">Online game</string>
    <string name="lbl_local_game">Local game</string>
    <string name="menu_action_profil">Profile</string>
    <string name="menu_action_settings">Settings</string>
    <string name="general_disconnect">Disconnect</string>
    <string name="disconnect_message">Disconnected</string>
    <string name="lbl_err_email">Mail invalid</string>
    <string name="success_login">Login successful</string>
    <string name="failed_login">Login failed</string>
    <string name="server_client_id" translatable="false">737891246568-lrqnd68abhib2c1lo8egqa2ofvp1lk0u.apps.googleusercontent.com</string>
    <string name="user_info_dialog_title">User infos</string>
    <string name="general_close">Close</string>
    <string name="sign_in_lbl_account_creation">Create your account</string>
    <string name="username_hint_username">Username</string>
    <string name="sign_in_error_duplicate_displayname">Username already taken</string>
    <string name="sign_in_error_duplicate_mail">This email is already taken</string>
    <string name="general_unconnected">Disconnected</string>
    <string name="signin_credential_error">Invalid credentials</string>
    <string name="connected">Connected !</string>
    <string name="general_error_title">Error</string>
    <string name="general_lbl_dismiss">Dismiss</string>
    <string name="general_info_title">Information</string>
    <string name="general_lbl_cancel">Cancel</string>
    <string name="general_lbl_confirm">Confirm</string>
    <string name="error_wrong_password">Wrong password</string>
    <string name="general_password">Password</string>
    <string name="err_username_already_exists">This username is already taken</string>
    <string name="username_lbl_choose_username">Choose your username</string>
    <string name="signin_lbl_mail">Enter your mail</string>
    <string name="signin_lbl_password">Enter your password</string>
    <string name="signin_lbl_confirm_password">Confirm your password</string>
    <string name="online_lbl_gamemode">Select a game mode</string>
    <string name="home_lbl_new_game">New game</string>
    <string name="new_game_lbl_launch">Launch</string>
    <string name="new_game_online">Online game</string>
    <string name="new_game_offline">Offline game</string>
    <string name="matchmaking_failed">Matchmaking error, please relaunch it.</string>
    <string name="matchmaking_success">Match found</string>
    <string name="settings_tactical_view_lbl">Enable Tactical view</string>
    <string name="general_or">OR</string>
    <string name="home_connection_required_title">Connection required</string>
    <string name="home_connection_required_title_message">You must connect to existing account to launch an online game.</string>
    <string name="matchmaking_cancelled">Matchmaking canceled</string>
    <string name="matchmaking_cannot_join_match">Cannot join match</string>
    <string name="sign_in_lbl_username">Enter your username</string>
    <string name="err_email_invalid">Invalid email address</string>
    <string name="err_mail_already_exists">Email address already registered</string>
    <string name="error_password_match">Password doesn\'t match</string>
    <string name="err_general">Unknown error</string>
    <string name="warn_account_exists_with_different_username">Log into existing account</string>
    <string name="general_continu">Continue</string>
    <string name="sign_in_hint_username">Your username</string>
    <string name="game_rule_title">Choose game rules</string>
    <string name="general_selection">Selection</string>
    <string name="general_description">Description</string>
    <string name="general_difficulty">Difficulty</string>
    <string name="general_balance">Balance</string>
    <string name="difficulty_level">Difficulty level</string>
    <string name="balance_level">Balance level</string>
    <string name="gamerules_name_classic">Classic</string>
    <string name="gamerules_description_classic">Classic rule set for a regular chess game.</string>
    <string name="gamerules_name_random">Random</string>
    <string name="gamerules_description_random">Le placement des pièces au début de la partie est aléatoire au sein des deux premières lignes. Le \"roc\" et le \"en passant\" sont impossible. Les autres rêgles sont inchangées.</string>
    <string name="content_desc_icon_gamerules">Gamerule icon</string>
    <string name="matchmaking_in_progress">Matchmaking in progress</string>
    <string name="general_lbl_retry">Retry</string>
    <string name="err_network">Connectivity error. Check your network and retry.</string>
    <string name="general_connect">Connect</string>
    <string name="warn_play_online_need_connection">If you want to play online you need to be connected on your VariantChess account.</string>
    <string name="err_reconnexion_error">Failed to recconnect</string>
    <string name="surrend">Surrender</string>

</resources>
