<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/lbl_mail_connect"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/signin_txt_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/lbl_hint_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/signin_txt_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/lbl_hint_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signin_btn_mail_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_connect"
        android:textSize="18sp" />

</LinearLayout>