<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_lbl_choose_username"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/username_txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:autofillHints="@string/username_hint_username"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:labelFor="@id/username_txt_username" />

    <Button
        android:id="@+id/username_btn_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general_lbl_confirm" />

</LinearLayout>