<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:labelFor="@id/new_game_spinner"
        android:text="@string/online_lbl_gamemode"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/new_game_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/new_game_rdb_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/new_game_rdb_online"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/new_game_online" />

        <RadioButton
            android:id="@+id/new_game_rdb_offline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_game_offline" />
    </RadioGroup>

    <Button
        android:id="@+id/new_game_btn_launch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game_lbl_launch" />

    <ProgressBar
        android:id="@+id/new_game_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />
</LinearLayout>